<resources>
    <string name="app_name">RevenueRetriver</string>
    <string name="log_on">Log On</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="no_data">no data</string>
    <string name="please_wait">Please Wait</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="menu">Menu</string>
    <string name="calender">Calender</string>
    <string name="settings">Settings</string>
    <string name="add_partner">Add Partner</string>
    <string name="signIn">SignIn</string>
    <string name="add_transaction">Add Transaction</string>
</resources>
